--- a/index.ipynb
+++ b/index.ipynb
@@ -51,20 +51,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Define Driver class here"
+    "class Driver:\n",
+    "    def greeting(self):\n",
+    "        return 'Hey, how are you?'\n",
+    "    def ask_for_destination(self):\n",
+    "        return 'Where would you like to go today?'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Define Passenger class here "
+    "class Passenger: \n",
+    "    def reply_greeting(self):\n",
+    "        return 'I am doing well! Thanks for picking me up today!'\n",
+    "    def in_a_hurry(self):\n",
+    "        return \"Punch it! They're on our tail!\""
    ]
   },
   {
@@ -79,14 +87,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "daniel = None # driver\n",
-    "meryl = None # driver\n",
-    "niky = None # passenger\n",
-    "terrance = None # passenger"
+    "daniel = Driver() # driver\n",
+    "meryl = Driver() # driver\n",
+    "niky = Passenger() # passenger\n",
+    "terrance = Passenger() # passenger"
    ]
   },
   {
@@ -98,21 +106,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hey, how are you?\n"
+     ]
+    }
+   ],
    "source": [
-    "polite_greeting = None\n",
+    "polite_greeting = daniel.greeting()\n",
     "print(polite_greeting)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Punch it! They're on our tail!\n"
+     ]
+    }
+   ],
    "source": [
-    "no_time_to_talk = None\n",
+    "no_time_to_talk = niky.in_a_hurry()\n",
     "print(no_time_to_talk)"
    ]
   },
@@ -129,29 +153,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# create Lion class"
+    "class Lion:\n",
+    "    def speak(self):\n",
+    "        return \"I just can't wait to be king!\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# create Tiger class"
+    "class Tiger:\n",
+    "    def speak(self):\n",
+    "        return \"Come on, man-cub, show yourself!\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# create Elephant class"
+    "class Elephant:\n",
+    "    def speak(self):\n",
+    "        return \"I guess I actually don't talk in the movie.\""
    ]
   },
   {
@@ -163,13 +193,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "simba = None\n",
-    "tony = None\n",
-    "dumbo = None"
+    "simba = Lion()\n",
+    "shere_khan = Tiger() \n",
+    "dumbo = Elephant()"
    ]
   },
   {
@@ -181,11 +211,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
-    "zoo = None"
+    "zoo = [simba, shere_khan, dumbo]"
    ]
   },
   {
@@ -197,10 +227,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I just can't wait to be king!\n",
+      "Come on, man-cub, show yourself!\n",
+      "I guess I actually don't talk in the movie.\n"
+     ]
+    }
+   ],
+   "source": [
+    "for animal in zoo:\n",
+    "    print(animal.speak())"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -227,7 +270,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
